<resources>
    <string name="app_name">iCog</string>
    <string name="search">Search</string>
    <string name="clear_search">Refresh</string>
    <string name="open_notifications">Enable notification</string>
    <string name="close_notifications">Disable notification</string>
    <string name="new_news_title">New PhotoGallery Pictures</string>
    <string name="new_news_text">You have new pictures in PhotoGallery.</string>
    <string name="retry_text">CONNECTION FAILED!</string>
    <string name="intern5">For students from other universities, please be noted that this doesn’t mean iCog has shut its door, rather your application will go through a  further process and depending on available spots, you can also be accepted.</string>
    <string name="about"> contact at amankassahun190@gmail.com</string>
    <string name="intern">                                                                                            Current Apprenticeship Openings\n  Unless there is an update on a special need, the following list of apprenticeship programs are what iCog offers and these are always open to the eligible candidates.\n               Advanced Computer programing\n               Artificial Intelligence\n               Computational Linguistics\n               Bioinformatics\n               Human Machine Interface\n               Robotics\n               3D Animation and Virtual Reality Modeling\n Who are the eligible candidates?\n          For Undergraduate Students, iCog’s Apprenticeship program is open only for students of Electrical Engineering and Computer Science students\n          For Graduate Students, iCog will accept students who are studying computer science related fields.\n\nN.B iCog has more than 20 partner universities and because of the sheer number of students applying of our internship program, we will only accept candidates from the following Ethiopian universities which have the priority based on their UIL performance with our company.</string>
    <string name="intern2">The iCog-Labs’s Student Apprenticeship Program offers substantive, practical work-learning experiences to undergraduate and graduate students at Addis Ababa University and other local and abroad universities.  Through this practical UCSD work-learning experience, students have the flexibility to explore career options while gaining exposure to valuable international networks and developing first-rate skills in Artificial Intelligence Development, Computer Programing, Robotics, Machine Interface, Bio-Informatics, Computer Algorithm and 3D Animations and Virtual Reality Modeling. iCog also serves as a career-development resource for students after they have completed their apprenticeships, assisting with job interviews, recommendations and related affairs.  Training and mentoring students is an opportunity to collaborate with a diverse group of personnel—a group representing the workforce of the future and who play a key role in the successful planning of iCog’s growth and development.</string>
    <string name="intern3">WE ACCEPT APPLICATIONS ANYTIME OF THE   YEAR</string>
    <string name="intern4">Apprenticeship Program</string>
    <string name="pass_hint">Password...</string>
    <string name="pass_emaill">Email</string>
    <string name="logo_desc">welcome logo</string>
    <string name="account_btn">LOGIN TO ACCOUNT</string>
    <string name="login_reg_btn">Create a new account</string>
    <string name="action_search_txt">Search</string>
    <string name="account_settings">Account settings</string>
    <string name="logout_btn">Log out</string>
    <string name="reg_btn_txt">Create new account</string>
    <string name="reg_login_txt">Already have an account</string>
    <string name="reg_confirm_pass_txt">Confirm password</string>
    <string name="setup_image_hint"/>
    <string name="setup_image_hintt">Your name...</string>
    <string name="setup_name_btn_txt">Save account</string>
    <string name="post_desc_hint"/>
    <string name="post_desc_hintt">Write post here...</string>
    <string name="new_post_btn_hint">Post</string>
    <string name="bottom_home_txt">Home</string>
    <string name="bottom_notification_txt">Notification</string>
    <string name="bottom_account_txt">Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="latest_news_txt">Latest news</string>
    <string name="blog_text">Blog</string>
    <string name="vacancy_txt">Vacancy</string>
    <string name="internship_txt">Internship</string>
    <string name="member_name_txt">Name</string>
    <string name="member_phone_no_txt">Phone number</string>
    <string name="member_dept_txt">Department</string>
    <string name="about2">iCog Labs is a research and development company based in Addis Ababa, Ethiopia, collaborating with international AI research groups and serving customers around the world. We have helped our customers with a variety of projects, but our core specialty is artificial intelligence, including machine learning based data analysis, computational linguistics, computer vision, mobile robots and cognitive robotics, cognitive architectures and artificial general intelligence. Our staffs bring experience contributing to international AI development teams, as well as software and hardware development experience on Ethiopian government and industry projects. We are core contributors to the OpenCog open source AI platform and utilize OpenCog within our projects as appropriate. \n\n Our mission is to advance science and technology for the good of all humanity, with a special focus on advanced AI and on the use of cutting-edge technology to help leapfrog Africa into the future.</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="compete">iCog incorporated some of its previous project ideas and resources and came up with SOLVE IT an innovation completion in selected cities of the country; capitalizing on the idea that the involvement of regional cities is crucial if one wants to create a sustainable local tech market. With such spirit, SOLVE IT was proposed to the US embassy in Addis Ababa. The first round of SOLVE IT, as a result, was conducted in collaboration with the US embassy (From November 30, 2017- September 25, 2018).  \n\nThe project sparked and created awareness about the impact of pro-poor technologies via direct seminars, media coverage, marketing collateral. And finally, it delivered a grand finale where the top three projects were selected in the national competition by mobilizing the top three projects, from each city, represented by one or two team members, for a week-long boot camp training before the national competition. In the boot camp the participants got the chance of to visit Ethiopian airlines, ENSA and other technology places. In the bootcamp the participants got a chance to meet and show their project to investors at the end they presented their respective pitch for competition judges.</string>
    <string name="register_for">Register For</string>
</resources>
