<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/bottom_action_home"
        android:icon="@mipmap/action_home"
        android:title="@string/bottom_home_txt"/>
    <item
        android:id="@+id/bottom_action_latest_news"
        android:icon="@mipmap/action_latest"
        android:title="@string/latest_news_txt"/>
    <item
        android:id="@+id/bottom_action_blog"
        android:icon="@mipmap/action_blog"
        android:title="@string/blog_text"/>
    <item
        android:id="@+id/bottom_action_vacancy"
        android:icon="@mipmap/action_vacancy"
        android:title="@string/vacancy_txt"/>
    <item
        android:id="@+id/bottom_action_internship"
        android:icon="@mipmap/action_internship"
        android:title="@string/internship_txt"/>
</menu>