<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_orange_dark"
    tools:context="com.example.amankassahun.Register2Activity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_error"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:textColorHint="#ffffff"
        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/login_password_error"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_txt">

        <EditText
            android:id="@+id/login_email"


            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="serif"
            android:hint="@string/pass_emaill"
            android:inputType="textEmailAddress"/>

    </android.support.design.widget.TextInputLayout>

   <android.support.design.widget.TextInputLayout
       android:id="@+id/login_password_error"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_marginBottom="16dp"
       android:layout_marginEnd="32dp"
       android:layout_marginLeft="32dp"
       android:layout_marginRight="32dp"
       android:layout_marginStart="32dp"
       android:textColorHint="#ffffff"
       app:layout_constraintBottom_toTopOf="@+id/login_btn"
       app:layout_constraintHorizontal_bias="1.0"
       app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintRight_toRightOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/login_error">
       <EditText
           android:id="@+id/login_password"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"

           android:ems="10"
           android:fontFamily="serif"
           android:hint="@string/pass_hint"
           android:inputType="textPassword"
           />
   </android.support.design.widget.TextInputLayout>


    <TextView
        android:id="@+id/login_reg_btn"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="96dp"
        android:layout_marginLeft="96dp"
        android:layout_marginRight="96dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="8dp"
        android:fontFamily="serif"
        android:gravity="center"
        android:text="@string/login_reg_btn"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/verifyButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"/>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginStart="32dp"
        android:background="#1D9141"
        android:fontFamily="serif"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:text="Login"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/forget_password"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_password_error"
        app:layout_constraintVertical_bias="1.0"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/login_reg_btn"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forget_password"
        tools:layout_editor_absoluteY="396dp">

        <View
            android:layout_width="100dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:background="#1D9141"></View>

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="10dp"
            android:fontFamily="serif"
            android:text="or"
            android:textColor="#ffffff"/>

        <View
            android:layout_width="100dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:background="#1D9141"></View>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="invisible"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/welcome_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginTop="32dp"
        android:background="@color/icogOrange"
        android:fontFamily="serif"
        android:gravity="center"
        android:text="iCog Labs"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/login_error"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/verifyButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:background="#ffffff"
        android:text="I don't get email verification"
        android:textAllCaps="false"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_reg_btn"/>

    <TextView
        android:id="@+id/forget_password"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="serif"
        android:gravity="center"
        android:text="Forget password?"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_btn"/>


</android.support.constraint.ConstraintLayout>
